src/index.scss
/* ... */
.product-info {
  flex: 1;
  max-width: 100%;
}

.product-image-container {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  max-width: 50%;
  margin: 0 auto;
  padding-bottom: 2px;
  overflow: hidden;
  gap: var(--vertical-padding);
  @media (max-width: $mobileBreakpoint) {
    max-width: 100%;
  }
}

.product-image {
  width: 100%;
  max-width: 300px;
  max-height: 300px;
  object-fit: contain;
  object-position: center;
  border-radius: 6px;
  @media (max-width: $tabletBreakpoint) {
    max-width: 100%;
  }
}

.product-image-source-link {
  color: var(--link);
  font-size: 12px;
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-color: var(--underline);
  text-underline-offset: 4px !important;
}

.top-buttons-container {
  display: flex;
  justify-content: end;
  @media screen and (max-width: $mobileBreakpoint) {
    justify-content: space-between;
  }
}

.close-button {
  flex-shrink: 0;
  align-self: end;
  width: 36px;
  height: 36px;
  margin-top: 32px;
  margin-right: 32px;
  border: 1px solid var(--border);
  border-radius: 9999px;
  color: var(--text-secondary);
  font-size: 20px;
  text-align: center;
  cursor: pointer;
  transition:
    background-color var(--transition-time) ease,
    border-color var(--transition-time) ease,
    color var(--transition-time) ease;
  @media (hover: hover) and (pointer: fine) {
    &:hover {
      border-color: var(--footer-button-highlight-hover);
      background-color: var(--footer-button-bg-hover);
      color: var(--footer-button-highlight-hover);
    }
  }
}

.mobile-nav-buttons-container {
  display: flex;
  justify-content: end;
  margin-top: 32px;
  margin-left: 32px;
  gap: 12px;
  @media screen and (min-width: $mobileBreakpoint) {
    display: none;
  }
}

.mobile-nav-button {
  width: 36px;
  height: 36px;
  border: 1px solid var(--border);
  border-radius: 9999px;
  color: var(--text-secondary);
  transition:
    background-color var(--transition-time) ease,
    border-color var(--transition-time) ease,
    color var(--transition-time) ease;
  @media (hover: hover) and (pointer: fine) {
    &:not(:disabled):hover {
      border-color: var(--footer-button-highlight-hover);
      background-color: var(--footer-button-bg-hover);
      color: var(--footer-button-highlight-hover);
    }
  }
  &:disabled {
    cursor: inherit;
    opacity: 0.2;
  }
}

.product-description {
  color: var(--text-primary);
  font-size: 18px;
  line-height: 1.5;
  font-family: var(--current-font);
}

.product-header {
  margin: 0;
  font-weight: 600;
  font-size: 24px;
  font-family: var(--current-font);
}

.sources-header {
  font-size: 18px;
}

.product-features li,
.product-sources li {
  margin: 10px 0;
  color: var(--text-primary);
  font-weight: 400;
  font-size: 18px;
  font-family: var(--current-font);
  list-style-type: inherit;
}

.source-link {
  color: var(--link);
  font-weight: 400;
  font-size: 16px;
  text-decoration: none;

  &:hover {
    text-decoration: none;
  }
}

.source-link-text {
  margin-right: 6px;
  &:hover {
    text-decoration: none;
  }
}

.source-link-icon {
  font-size: 13px;
}

table {
  width: 100%;
  border-collapse: collapse;
  font-family: var(--current-font);
}
th,
td {
  padding: 8px;
  border: 1px solid var(--border);
  color: var(--text-secondary);
  text-align: left;
}

.date-list {
  display: none;
}

.overlay {
  display: inline-block;
  z-index: 999;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--overlay);
  cursor: pointer;
  opacity: 0;
  opacity: 0.2;
  opacity: 0.48;
}

#footer {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: var(--vertical-padding);
  padding: 56px 32px;
  gap: 32px;
  border-radius: var(--border-radius);
  background-color: var(--footer-bg);
  line-height: 1.5;
}

#footer-button-container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 12px;
}

.footer-button,
.product-card-button {
  padding: 6px 12px;
  border: 1px solid var(--border);
  border-radius: var(--border-radius-button);
  color: var(--text-secondary);
  font-size: 1em;
  text-decoration: none;
  transition:
    background-color var(--transition-time) ease,
    border-color var(--transition-time) ease,
    color var(--transition-time) ease;
  @media (hover: hover) and (pointer: fine) {
    &:hover {
      border-color: var(--footer-button-highlight-hover);
      background-color: var(--footer-button-bg-hover);
      color: var(--footer-button-highlight-hover);
    }
  }
}

.product-card-button {
  margin: 0 auto;
}

.footer-text-container {
  display: flex;
  flex-direction: column;
  gap: 12px;
  cursor: default;
}

.footer-text {
  border-radius: var(--border-radius);
  color: var(--text-secondary);
  font-size: 1em;
  text-align: center;
}

.last-updated-text {
  margin: auto;
  cursor: default;
}

.last-updated-time {
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-color: var(--underline);
  text-underline-offset: 4px;
  cursor: pointer;
}

:focus-visible {
  outline: 3px solid var(--focus-color);
  outline-offset: 2px;
}

::selection {
  background-color: #ffd700;
  color: black;
}

.rotate-90 {
  transform: rotate(90deg);
}

